[gd_scene load_steps=3 format=1]

[ext_resource path="res://lsr_widgets/text_edit_widget/text_edit_widget.gd" type="Script" id=1]
[ext_resource path="res://lsr_widgets/text_edit_widget/main_gui.tscn" type="PackedScene" id=2]

[node name="text_edit_widget" type="Node"]

script/script = ExtResource( 1 )

[node name="main_canvas" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 40.0

[node name="main_gui" parent="main_canvas" instance=ExtResource( 2 )]


